fix(recommendation): enforce AI response invariants